--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* class for mobile responsive content container */
+.centered-container {
+    @apply w-full border-b flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:justify-between lg:space-y-0 lg:space-x-5 lg:p-8 xl:justify-evenly xl:space-x-0 xl:p-12;
+}
