--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,16 @@
     @apply w-full border-b flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:justify-between lg:space-y-0 lg:space-x-5 lg:p-8 xl:justify-evenly xl:space-x-0 xl:p-12;
 }
 
+/* class for mobile responsive image container */
+.centered-container__image {
+    @apply relative w-full sm:w-1/2 xl:w-1/3;
+    aspect-ratio: 1/1;
+}
+/* class for mobile responseive title and text container */
+.centered-container__text {
+    @apply w-full lg:w-1/2 xl:w-1/3;
+}
+
 .single {
     justify-content: center;
 }
