--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 
+body {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+
 /* class for mobile responsive content container */
 .centered-container {
     @apply w-full border-b flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:justify-between lg:space-y-0 lg:space-x-5 lg:p-8 xl:justify-evenly xl:space-x-0 xl:p-12;
@@ -18,6 +23,10 @@
     @apply w-full lg:w-1/2 xl:w-1/3;
 }
 
-.single {
-    justify-content: center;
+.body-text {
+    @apply text-base font-light text-gray-600;
+}
+
+.header-text {
+    @apply text-6xl lg:text-5xl font-bold tracking-tighter leading-tight whitespace-pre-wrap;
 }
