--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
 
 /* class for mobile responsive content container */
 .centered-container {
-    @apply w-full border-b flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:justify-between lg:space-y-0 lg:space-x-5 lg:p-8 xl:justify-evenly xl:space-x-0 xl:p-12;
+    @apply w-full border-b border-black flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:justify-between lg:space-y-0 lg:space-x-5 lg:p-8 xl:justify-evenly xl:space-x-0 xl:p-12;
 }
 
 /* class for mobile responsive image container */
@@ -24,9 +24,17 @@ body {
 }
 
 .body-text {
-    @apply text-base font-light text-gray-600;
+    @apply text-base font-light;
 }
 
 .header-text {
-    @apply text-4xl lg:text-5xl font-bold tracking-tighter leading-tight whitespace-pre-wrap;
+    @apply text-4xl lg:text-5xl tracking-tighter leading-tight whitespace-pre-wrap;
+}
+
+.contact-form-input {
+    @apply block w-full bg-gray-200 text-gray-700 border py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white;
+}
+
+.two-tone-button {
+    @apply border border-black py-3 px-12 transition-colors duration-200 hover:bg-contrast-bg;
 }
