--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 
 body {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 
@@ -36,9 +36,5 @@ body {
 }
 
 .two-tone-button {
-    @apply border border-black py-3 px-12 transition-colors duration-200 hover:bg-contrast-bg;
-}
-
-.two-tone-button-inverse {
-    @apply border border-black py-3 px-12 transition-colors duration-200 hover:bg-dark-bg hover:text-white bg-contrast-bg text-black;
+    @apply border border-black py-3 px-12 transition-colors duration-200 bg-contrast-bg hover:bg-primary hover:text-text-contrast;
 }
