more resources stuff

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,5 +44,13 @@ body {
     -webkit-line-clamp: 6;
     -webkit-box-orient: vertical;
     overflow: hidden;
-  }
+}
+
+.truncate-lines-small {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
   
