--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,12 +10,12 @@ body {
 
 /* class for mobile responsive content container */
 .centered-container {
-    @apply w-full border-black flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:space-y-0 lg:space-x-5 lg:p-8 lg:justify-evenly xl:space-x-0 xl:p-12;
+    @apply w-full flex flex-col items-center justify-center p-5 space-y-5 lg:flex-row lg:space-y-0 lg:space-x-5 lg:p-8 lg:justify-evenly xl:space-x-0 xl:p-12;
 }
 
 /* class for mobile responsive image container */
 .centered-container__image {
-    @apply relative w-full sm:w-1/2 xl:w-1/3;
+    @apply relative w-full sm:w-1/3 xl:w-1/4 rounded-xl overflow-hidden;
     aspect-ratio: 1/1;
 }
 /* class for mobile responseive title and text container */
