--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
 
 /* class for mobile responsive content container */
 .centered-container {
-    @apply w-full flex flex-col items-center justify-center p-5 py-12 space-y-5 lg:py-0 lg:flex-row lg:space-y-0 lg:space-x-5 lg:p-8 lg:justify-evenly xl:space-x-0 xl:p-12;
+    @apply w-full flex flex-col items-center justify-center p-5 py-12 space-y-5 lg:space-x-5 md:px-10 lg:p-8 lg:justify-evenly xl:flex-row xl:space-y-0 xl:space-x-0 xl:py-0 xl:p-12;
 }
 
 /* class for mobile responsive image container */
@@ -18,17 +18,17 @@ body {
     @apply relative w-full sm:w-1/3 md:w-1/2 xl:w-1/4 rounded-xl overflow-hidden;
     aspect-ratio: 1/1;
 }
-/* class for mobile responseive title and text container */
+/* class for mobile responsive title and text container */
 .centered-container__text {
     @apply w-full lg:w-1/2 xl:w-1/3;
 }
 
 .body-text {
-    @apply text-sm font-light md:text-base
+    @apply text-sm font-light md:text-base text-text-primary;
 }
 
 .header-text {
-    @apply text-4xl lg:text-5xl tracking-tighter leading-tight whitespace-pre-wrap;
+    @apply text-4xl lg:text-5xl tracking-tighter leading-tight whitespace-pre-wrap text-text-primary;
 }
 
 .contact-form-input {
