--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,6 +76,7 @@ body {
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .truncate-lines-small {
