--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,12 +24,12 @@ body {
 
 /* class for mobile responsive content container */
 .centered-container {
-    @apply w-full flex flex-col items-center justify-center p-5 space-y-5 lg:space-x-5 md:px-10 lg:p-8 lg:justify-evenly 2xl:flex-row xl:space-y-0 xl:space-x-0 xl:py-0 xl:p-12;
+    @apply w-full flex flex-col items-center justify-center space-y-8 p-5 md:p-8 xl:p-12 xl:space-y-10;
 }
 
 /* class for mobile responsive image container */
 .centered-container__image {
-    @apply relative w-full md:w-3/5 xl:w-1/3 rounded-xl overflow-hidden;
+    @apply relative w-full sm:w-3/5 xl:w-1/3 rounded-xl overflow-hidden;
     aspect-ratio: 1/1;
 }
 
@@ -47,6 +47,10 @@ body {
 
 .header-text {
     @apply text-4xl lg:text-5xl whitespace-pre-wrap font-walbaum;
+}
+
+.post-header-text {
+    @apply text-3xl lg:text-4xl whitespace-pre-wrap font-garamond;
 }
 
 .subheader-text {
