--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,8 +96,8 @@ body {
 .custom-portable-text ul {
     list-style: disc;
     padding-left: 1.5em;
-    margin-bottom: 0;
-    margin-top: 0;
+    margin-bottom: .5em; 
+    margin-top: -.5em;
 }
 
 .custom-portable-text p {
